# Analyse_fluxvideo

./: CMakeLists.txt  CMakeLists.txt~  README.md
backup/: stabilizationSimpleTest2(kalman).cpp
backup/src/: drone.hpp
backup/src/Debug/: timer.cpp  timer.hpp
backup/src/core/: image.hpp
backup/src/core/features/: IStabilization.cpp  stabilizationLive.hpp  stabilizationOpenCv.cpp  stabilizationSimple.cpp  stabilizationSimple.hpp  stabilizationSimpleTest2.cpp
backup/src/test/: main.cpp
backup/src/utilities/: videoUtil.cpp
src/: drone.hpp  main.cpp
src/Debug/: debug.cpp  debug.hpp  timer.cpp
src/core/features/: IStabilization.cpp  IStabilization.hpp  stabilizationKalman.cpp  stabilizationKalman.hpp  stabilizationLive.cpp  stabilizationLive.hpp  stabilizationOpenCv.cpp  stabilizationOpenCv.hpp  stabilizationSimple.cpp  stabilizationSimple.hpp  stabilizationSimpleTest.cpp  stabilizationSimpleTest.hpp  stabilizationSimpleTest2.cpp  stabilizationSimpleTest2.hpp
src/test/: main.cpp  main.cpp.autosave
src/utilities/: camshift.cpp  camshift1.cpp  camshiftPerso.cpp  camshiftPerso.hpp  camshiftdemo.cpp  inRange.cpp  inRange.hpp  ioexception.hpp  videoRead.cpp  videoRead.hpp  videoUtil.cpp  videoUtil.hpp
